# Schabaschkascuhen

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.searxng.yml  pyproject.toml
config/: profile.example.yaml
config/users/: example.yaml
deploy/: com.schabasch.nightly.plist
deploy/searxng/: settings.yml
docs/: ANNOTATION.md  IMPORT_AUDIT.md  LITERATURE_REVIEW.md  MATCHING_SOTA.md  ROADMAP.md  USE_CASE.md
docs/screenshots/: annotate.html  eval.html  gaps.html  slate.html
eval/: canonical_jd_experiment.py  esco_signal.py  experiment.py  feature_ablation.py  hybrid_measure.py  hybrid_probe.py  llm_cov_signal.py  match_eval.py  role_ablation.py
evals/deadcode/: score-history.jsonl
schabasch/: 15JuneSession.md  INTERFACES.md  __init__.py  agent_runtime.py  aspects.py  calibration.py  candidate.py  cli.py  config.py  db.py  dedup.py  eligibility.py  enrichment.py  features.py  feedback_app.py  freshness.py  gaps.py  geo.py  hardfilters.py  i18n.py  investigate.py  judge.py  llm.py  llm_clients.py  memory_guard.py  metrics.py  models.py  normalize.py  pipeline.py  registration.py  role_feedback.py  role_kind.py  slate.py  tasks.py  triage.py  users.py  validation.py
schabasch/browsing/: __init__.py  entity.py  extract.py  registry.py  search.py
schabasch/locales/: en.json  ru.json
schabasch/sources/: __init__.py  agent_discovery.py  arbeitsagentur.py  ats_boards.py  hn_hiring.py  indeed.py  jobspy_source.py  social.py  tertiary.py
scripts/: backfill_bgem3_sparse.py  backfill_company_knowledge.py  backfill_session_notes.py  gen_screenshots.py  ingest_comment_tasks.py  serve_mlx.sh
tests/: conftest.py  test_agent_discovery.py  test_agent_runtime.py  test_annotate.py  test_aspects.py  test_ats_boards.py  test_backfill_notes.py  test_browsing.py  test_calibration.py  test_candidate.py  test_company_validation.py  test_db_fsm.py  test_dedup_fuzzy.py  test_dedup_models.py  test_eligibility.py  test_enrichment.py  test_expire.py  test_features.py  test_feedback_app.py  test_fit.py  test_freshness.py  test_gaps.py  test_geo.py  test_hardfilters.py  test_hn_hiring.py  test_i18n.py  test_indeed_liveness.py  test_investigate_one.py  test_jobspy_worldwide.py  test_llm_clients.py  test_memory_fetch.py  test_normalize_judge.py  test_persona.py  test_pipeline_logging.py  test_registration.py  test_rerank.py  test_role_feedback.py  test_role_kind.py  test_slate.py  test_social.py  (+7 more)
